fixed header z-index

--- a/styles.scss
+++ b/styles.scss
@@ -54,7 +54,7 @@ body {
   width: 1280px;
   padding-right: 20px;
   color: var(--color-primary-900);
-  z-index: 99;
+  z-index: 999;
 }
 
 .header {
